--- a/redis-demo/src/main/resources/application.properties
+++ b/redis-demo/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.redis.jedis.pool.max-idle=100
 spring.redis.lettuce.pool.min-idle=1
 spring.redis.jedis.pool.max-active=1000
 spring.redis.lettuce.pool.max-wait=-1
+
+server.port=8089
